--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@aws-amplify/ui": "^6.0.7",
     "@aws-amplify/ui-angular": "^5.0.7",
     "@aws-sdk/client-cognito-identity": "^3.490.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "aws-amplify": "^6.0.12",
     "ng-gallery": "^11.0.0",
+    "ngx-owl-carousel-o": "^17.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
